# forgex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fpm.toml  gen-ford.yaml  gen-ford.yml  index.html  search.html
app/: forgex-cli.f90  heavy.f90  main.f90  single.f90
css/: user.css
example/: example.f90  heavy.f90  light-in.f90  light-match.f90  light.f90
ford/: README_en.md  README_ja.md  common.css
interface/: disjoin.html  free_dlist.html  is_valid_regex.html  operator(.in.).html  operator(.in.)~2.html  operator(.in.)~3.html  operator(.match.).html  operator(==).html  operator(SLASH=).html  print_tree.html  queryperformancecounter.html  queryperformancefrequency.html  regex.html  regex_f.html
lists/: files.html  modules.html  procedures.html  types.html
module/: forgex.html  forgex_api_internal_m.html  forgex_automaton_m.html  forgex_character_array_m.html  forgex_cli_api_internal_no_opts_m.html  forgex_cli_cla_m.html  forgex_cli_debug_m.html  forgex_cli_find_m.html  forgex_cli_help_messages_m.html  forgex_cli_memory_calculation_m.html  forgex_cli_parameters_m.html  forgex_cli_time_measurement_m.html  forgex_cli_type_m.html  forgex_cli_utils_m.html  forgex_dense_dfa_m.html  forgex_enums_m.html  forgex_error_m.html  forgex_lazy_dfa_graph_m.html  forgex_lazy_dfa_m.html  forgex_lazy_dfa_node_m.html  forgex_literal_match_m.html  forgex_nfa_graph_m.html  forgex_nfa_m.html  forgex_nfa_node_m.html  forgex_nfa_state_set_m.html  forgex_parameters_m.html  forgex_priority_queue_m.html  forgex_segment_disjoin_m.html  forgex_segment_m.html  forgex_sort_m.html  forgex_syntax_tree_error_m.html  forgex_syntax_tree_graph_m.html  forgex_syntax_tree_m.html  forgex_syntax_tree_node_m.html  forgex_syntax_tree_optimize_m.html  forgex_test_m.html  forgex_time_measurement_m.html  forgex_utf8_m.html  forgex_utility_m.html
page/: index.html
proc/: add_dfa_transition.html  add_nfa_state.html  adjustl_multi_byte.html  all_literals.html  arg_in_segment.html  arg_in_segment_list.html  automaton__build_nfa.html  automaton__compute_reachable_state.html  automaton__construct_dfa.html  automaton__deallocate.html  automaton__destination.html  automaton__epsilon_closure.html  automaton__initialize.html  automaton__move.html  automaton__print_dfa.html  automaton__print_info.html  automaton__register_state.html  best.html  best_factor.html  bubble_sort.html  build_automaton.html  build_nfa_graph.html  build_syntax_tree.html  char_class.html  char_utf8.html  character_string_to_array.html  check_nfa_state.html  cla__collect_flags.html  cla__do_debug_subc.html  cla__do_find_subc.html  cla__get_patterns.html  cla__init_debug_subc.html  cla__init_find_match_subsubc.html  cla__init_find_subc.html  cla__initialize.html  cla__read_command.html  cla__read_sub_subcommand.html  cla__read_subcommand.html  clear.html  cmd__get_name.html  (+263 more)
sourcefile/: api_internal_m.f90.html  automaton_m.f90.html  character_array_m.f90.html  cli_api_internal_no_opts_m.f90.html  cli_cla_m.f90.html  cli_debug_m.f90.html  cli_find_m.f90.html  cli_help_messages_m.f90.html  cli_memory_calculation_m.f90.html  cli_parameter_m.f90.html  cli_time_measurement_m.f90.html  cli_type_m.f90.html  cli_utils_m.f90.html  dense_dfa_m.f90.html  enums_m.f90.html  error_m.f90.html  forgex.f90.html  lazy_dfa_graph_m.f90.html  lazy_dfa_m.f90.html  lazy_dfa_node_m.f90.html  literal_match_m.f90.html  nfa_graph_m.f90.html  nfa_m.f90.html  nfa_node_m.f90.html  nfa_state_set_m.f90.html  parameters_m.f90.html  priority_queue_m.f90.html  segment_disjoin_m.f90.html  segment_m.f90.html  sort_m.f90.html  syntax_tree_error_m.f90.html  syntax_tree_graph_m.f90.html  syntax_tree_m.f90.html  syntax_tree_node_m.f90.html  syntax_tree_optimize_m.f90.html  test_m.f90.html  time_measurement_m.f90.html  utf8_m.f90.html  utility_m.f90.html
src/: CMakeLists.txt  api_internal_m.F90  api_internal_m.f90  automaton_m.F90  automaton_m.f90  c_func_m.f90  character_array_m.F90  cli_api_internal_no_opts_m.f90  cli_cla_m.f90  cli_debug_m.f90  cli_find_m.f90  cli_help_messages_m.f90  cli_parameter_m.f90  cli_time_measurement_m.F90  cli_utils_m.f90  dense_dfa_m.f90  dfa_m.f90  enums_m.f90  error_m.F90  forgex.F90  forgex.f90  func_c.c  in_operator_m.f90  lazy_dfa_graph_m.F90  lazy_dfa_graph_m.f90  lazy_dfa_m.F90  lazy_dfa_m.f90  lazy_dfa_node_m.F90  lazy_dfa_node_m.f90  nfa_graph_m.F90  nfa_m.F90  nfa_m.f90  nfa_node_m.F90  nfa_state_set_m.F90  nfa_state_set_m.f90  parameters_m.f90  priority_queue_m.f90  segment_disjoin_m.f90  segment_m.F90  segment_m.f90  (+16 more)
src/ast/: CMakeLists.txt  character_array_m.F90  syntax_tree_error_m.F90  syntax_tree_error_m.f90  syntax_tree_graph_m.F90  syntax_tree_node_m.F90  syntax_tree_optimize_exp_m.F90  syntax_tree_optimize_m.F90
src/benchmark/: cli_cla_m.f90  cli_debug_m.f90  cli_find_m.f90  cli_help_messages_m.f90  cli_m.f90  cli_memory_calculation_m.f90  cli_memory_measurement_m.f90  cli_parameter_m.f90  cli_qpc_qpf.c  cli_time_measurement_m.F90  cli_type_m.f90  cli_utils_m.f90  time_measurement_cpu_m.f90  time_measurement_m.f90  time_measurement_omp_m.F90
src/dense_dfa/: dense_dfa_m.f90
src/essential/: CMakeLists.txt  enums_m.f90  error_m.F90  parameters_m.f90  priority_queue_m.f90  segment_disjoin_m.F90  segment_m.F90  sort_m.f90  utf8_m.f90  utility_m.f90
src/forgex_cli/: cli_api_internal_no_opts_m.f90  cli_cla_m.f90  cli_debug_m.f90  cli_find_m.f90  cli_help_messages_m.f90  cli_memory_calculation_m.f90  cli_parameter_m.f90  cli_qpc_qpf.c  cli_time_measurement_m.F90  cli_type_m.f90  cli_utils_m.f90
src/lazy_dfa/: CMakeLists.txt  lazy_dfa_graph_m.F90  lazy_dfa_node_m.F90
src/literal_and_wildcard/: literal_match_m.f90
src/nfa/: CMakeLists.txt  nfa_graph_m.F90  nfa_node_m.F90  nfa_state_set_m.F90
test/: CMakeLists.txt  literal.f90  new.f90  test.f90  test_any.f90  test_case_001.f90  test_case_002.f90  test_case_003.f90  test_case_004.f90  test_case_005.f90  test_case_006.f90  test_case_007.f90  test_lazy_dfa_prototype.f90
tipuesearch/: tipuesearch_content.js
type/: allocated_list_t.html  arg_element_t.html  arg_t.html  cla_t.html  (+31 more)
(+60 files in other folders)
